# StarletEngine

./: CMakeLists.txt  README.md
inc/: callbacks.hpp  engine.hpp  window.hpp
inc/StarletEngine/: callbacks.hpp  engine.hpp  renderer.hpp  resourceLoader.hpp  timer.hpp  window.hpp  windowManager.hpp
src/: callbacks.cpp  engine.cpp  engineFunctions.cpp  engineInit.cpp  engineRender.cpp  engineRun.cpp  engineScene.cpp  renderer.cpp  resourceLoader.cpp  timer.cpp  window.cpp  windowManager.cpp
